Update: Added installation instructions

--- a/Hubbard.ipynb
+++ b/Hubbard.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "65b918c8",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
     "import sympy as sp\n",
     "\n",
     "\n",
-    "\n",
+    "#executing imports\n",
     "\n"
    ]
   },
