--- a/Hubbard.ipynb
+++ b/Hubbard.ipynb
@@ -1,24 +1,45 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 74,
+   "cell_type": "markdown",
    "id": "65b918c8",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from itertools import combinations\n",
-    "import sympy as sp\n",
+    "## **1. Two-site Hubbard model** **[4 points]**  \n",
     "\n",
+    "Consider a half-filled ($N_{e}=2$, where $N_{e}$ is the number of electrons) two-site Hubbard model  \n",
     "\n",
+    "\\[\n",
+    "H = -t\\sum_{\\sigma}\\left[c^{\\dagger}_{1\\sigma}c_{2\\sigma}+c^{\\dagger}_{2\\sigma}c_{1\\sigma}\\right]\n",
+    "    + U\\hat{n}_{1\\uparrow}\\hat{n}_{1\\downarrow}\n",
+    "    + U\\hat{n}_{2\\uparrow}\\hat{n}_{2\\downarrow}\n",
+    "    = H_{0} + H_{U}\n",
+    "\\tag{1}\n",
+    "\\]\n",
     "\n",
+    "**Solve the Hamiltonian exactly.**  \n",
+    "\n",
+    "1. **Write down first all possible states (Slater determinants)** with $N_{e}=2$ in second quantization. How many can you build?  \n",
+    "2. **Construct the associated Hamiltonian matrix** in this basis and **diagonalize it exactly** to find the ground state.\n",
+    "3. **Plot the energies** as a function of $t/U$.  \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "id": "5bc20ea5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from itertools import combinations\n",
+    "import sympy as sp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "208e572b",
    "metadata": {},
    "outputs": [],
@@ -48,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "da462268",
    "metadata": {},
    "outputs": [],
@@ -85,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "ca58c330",
    "metadata": {},
    "outputs": [],
@@ -104,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 5,
    "id": "3e8d6b9f",
    "metadata": {},
    "outputs": [],
@@ -174,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 6,
    "id": "d46f4a8b",
    "metadata": {},
    "outputs": [
@@ -197,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 7,
    "id": "9ca3428c",
    "metadata": {},
    "outputs": [
@@ -235,7 +256,7 @@
        "'\\n\\nP, D = H_matrix.diagonalize()\\n\\nprint(\"\\nMatrix P (eigenvectors as columns):\")\\nsp.pprint(P)\\n\\nprint(\"\\nEach eigenvector column explicitly:\")\\nfor i in range(P.shape[1]):\\n    eigenvector_i = P[:, i]  # Get i-th column\\n    eigenvector_i_simplified = sp.simplify(eigenvector_i)\\n    print(f\"\\nv_{i+1} (for λ = {sp.simplify(D[i,i])}):\")\\n    print(f\"  {eigenvector_i_simplified.T}\")\\n\\n\\nprint(type(H_matrix))\\n\\n\\n\\n'"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,24 +300,6 @@
     "\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
-   "id": "6150cdcd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Matrix([[0, 0, -t, -t, 0, 0], [0, 0, 0, 0, 0, 0], [-t, 0, 0, 0, 0, -t], [-t, 0, 0, 0, 0, -t], [0, 0, 0, 0, 0, 0], [0, 0, -t, -t, 0, 0]])\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(HH_matrix)\n"
    ]
   },
   {
