--- a/Hubbard.ipynb
+++ b/Hubbard.ipynb
@@ -7,21 +7,19 @@
    "source": [
     "## **1. Two-site Hubbard model** **[4 points]**  \n",
     "\n",
-    "Consider a half-filled ($N_{e}=2$, where $N_{e}$ is the number of electrons) two-site Hubbard model  \n",
+    "Consider a half-filled ($N_{e}=2$, where $N_{e}$ is the number of electrons) two-site Hubbard model:\n",
     "\n",
-    "\\[\n",
-    "H = -t\\sum_{\\sigma}\\left[c^{\\dagger}_{1\\sigma}c_{2\\sigma}+c^{\\dagger}_{2\\sigma}c_{1\\sigma}\\right]\n",
-    "    + U\\hat{n}_{1\\uparrow}\\hat{n}_{1\\downarrow}\n",
-    "    + U\\hat{n}_{2\\uparrow}\\hat{n}_{2\\downarrow}\n",
-    "    = H_{0} + H_{U}\n",
-    "\\tag{1}\n",
-    "\\]\n",
+    "$$\n",
+    "H = -t\\sum_{\\sigma}\\left[c^{\\dagger}_{1\\sigma}c_{2\\sigma} + c^{\\dagger}_{2\\sigma}c_{1\\sigma}\\right]\n",
+    "    + U\\left(\\hat{n}_{1\\uparrow}\\hat{n}_{1\\downarrow} + \\hat{n}_{2\\uparrow}\\hat{n}_{2\\downarrow}\\right)\n",
+    "$$\n",
+    "\n",
     "\n",
     "**Solve the Hamiltonian exactly.**  \n",
     "\n",
-    "1. **Write down first all possible states (Slater determinants)** with $N_{e}=2$ in second quantization. How many can you build?  \n",
-    "2. **Construct the associated Hamiltonian matrix** in this basis and **diagonalize it exactly** to find the ground state.\n",
-    "3. **Plot the energies** as a function of $t/U$.  \n",
+    "1. Write down first all possible states (Slater determinants) with $N_{e}=2$ in second quantization. How many can you build?  \n",
+    "2. Construct the associated Hamiltonian matrix in this basis and diagonalize it exactly to find the ground state.\n",
+    "3. Plot the energies as a function of $t/U$.  \n",
     "\n"
    ]
   },
