--- a/Hubbard.ipynb
+++ b/Hubbard.ipynb
@@ -5,7 +5,7 @@
    "id": "65b918c8",
    "metadata": {},
    "source": [
-    "## **1. Two-site Hubbard model** **[4 points]**  \n",
+    "## **1. Two-site Hubbard model** \n",
     "\n",
     "Consider a half-filled ($N_{e}=2$, where $N_{e}$ is the number of electrons) two-site Hubbard model:\n",
     "\n",
@@ -15,17 +15,16 @@
     "$$\n",
     "\n",
     "\n",
-    "**Solve the Hamiltonian exactly.**  \n",
     "\n",
-    "1. Write down first all possible states (Slater determinants) with $N_{e}=2$ in second quantization. How many can you build?  \n",
-    "2. Construct the associated Hamiltonian matrix in this basis and diagonalize it exactly to find the ground state.\n",
-    "3. Plot the energies as a function of $t/U$.  \n",
+    "\n",
+    "Construct the associated Hamiltonian matrix in the basis of all possible states (Slater determinants) with $N_{e}=2$ in second quantization and diagonalize it exactly to find the ground state. Plot the ground state energy as a function of t/U.\n",
+    " \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "5bc20ea5",
    "metadata": {},
    "outputs": [],
@@ -37,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "208e572b",
    "metadata": {},
    "outputs": [],
@@ -67,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "da462268",
    "metadata": {},
    "outputs": [],
@@ -104,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "ca58c330",
    "metadata": {},
    "outputs": [],
@@ -123,11 +122,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "3e8d6b9f",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Function to create the associated Hamiltonian matrix with inputs t and U\n",
     "def Hubbard_Hamiltonian_matrix(basis_states,t,U):\n",
     "    state_dict = state_index_mapping(basis_states)\n",
     "    matrix = sp.zeros(6)\n",
@@ -185,15 +185,13 @@
     "\n",
     "\n",
     "\n",
-    "            \n",
-    "\n",
     "\n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "d46f4a8b",
    "metadata": {},
    "outputs": [
@@ -201,22 +199,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Matrix([[U, 0, -t, -t, 0, 0], [0, 0, 0, 0, 0, 0], [-t, 0, 0, 0, 0, -t], [-t, 0, 0, 0, 0, -t], [0, 0, 0, 0, 0, 0], [0, 0, -t, -t, 0, U]])\n"
+      "⎡U   0  -t  -t  0  0 ⎤\n",
+      "⎢                    ⎥\n",
+      "⎢0   0  0   0   0  0 ⎥\n",
+      "⎢                    ⎥\n",
+      "⎢-t  0  0   0   0  -t⎥\n",
+      "⎢                    ⎥\n",
+      "⎢-t  0  0   0   0  -t⎥\n",
+      "⎢                    ⎥\n",
+      "⎢0   0  0   0   0  0 ⎥\n",
+      "⎢                    ⎥\n",
+      "⎣0   0  -t  -t  0  U ⎦\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "basis=generate_basis_states()\n",
-    "\n",
-    "#print(state_index_mapping(basis))\n",
     "t, U = sp.symbols('t U', real=True)\n",
-    "HH_matrix=Hubbard_Hamiltonian_matrix(basis,t,U)\n",
-    "print(HH_matrix)\n"
+    "HH_matrix=Hubbard_Hamiltonian_matrix(basis,t,U) \n",
+    "sp.pprint(HH_matrix)\n",
+    "print()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "id": "9ca3428c",
    "metadata": {},
    "outputs": [
@@ -247,21 +255,10 @@
       "  Eigenvector 1:\n",
       "    Matrix([[1, 0, (U - sqrt(U**2 + 16*t**2))/(4*t), (U - sqrt(U**2 + 16*t**2))/(4*t), 0, 1]])\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\n\\nP, D = H_matrix.diagonalize()\\n\\nprint(\"\\nMatrix P (eigenvectors as columns):\")\\nsp.pprint(P)\\n\\nprint(\"\\nEach eigenvector column explicitly:\")\\nfor i in range(P.shape[1]):\\n    eigenvector_i = P[:, i]  # Get i-th column\\n    eigenvector_i_simplified = sp.simplify(eigenvector_i)\\n    print(f\"\\nv_{i+1} (for λ = {sp.simplify(D[i,i])}):\")\\n    print(f\"  {eigenvector_i_simplified.T}\")\\n\\n\\nprint(type(H_matrix))\\n\\n\\n\\n'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "\n",
+    "#Diagonalize the matrix\n",
     "eigenvects = HH_matrix.eigenvects()\n",
     "\n",
     "print(\"\\nEigenvectors with corresponding eigenvalues:\")\n",
@@ -274,28 +271,6 @@
     "        vec_simplified = sp.simplify(vec)\n",
     "        print(f\"  Eigenvector {i+1}:\")\n",
     "        print(f\"    {vec_simplified.T}\")  \n",
-    "\n",
-    "\"\"\"\n",
-    "\n",
-    "P, D = H_matrix.diagonalize()\n",
-    "\n",
-    "print(\"\\nMatrix P (eigenvectors as columns):\")\n",
-    "sp.pprint(P)\n",
-    "\n",
-    "print(\"\\nEach eigenvector column explicitly:\")\n",
-    "for i in range(P.shape[1]):\n",
-    "    eigenvector_i = P[:, i]  # Get i-th column\n",
-    "    eigenvector_i_simplified = sp.simplify(eigenvector_i)\n",
-    "    print(f\"\\nv_{i+1} (for λ = {sp.simplify(D[i,i])}):\")\n",
-    "    print(f\"  {eigenvector_i_simplified.T}\")\n",
-    "\n",
-    "\n",
-    "print(type(H_matrix))\n",
-    "\n",
-    "\n",
-    "\n",
-    "\"\"\"\n",
-    "\n",
     "\n",
     "\n"
    ]
