--- a/Non-interacting retarded Green function.ipynb
+++ b/Non-interacting retarded Green function.ipynb
@@ -4,7 +4,29 @@
    "cell_type": "markdown",
    "id": "9b3bfb46",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 2. Non-interacting retarded Green function [2 points]\n",
+    "\n",
+    "Calculate analytically the retarded Green function $G_{0}(\\mathbf{\\omega},t)$ of the 2-dimensional Hubbard model for $U=0, T=0$ and at half-filling. The definition is:\n",
+    "\n",
+    "$$\n",
+    "G_{0}(\\mathbf{k},t) = -\\frac{i}{\\hbar}\\Theta(t)\\langle\\{c_{k\\sigma}(t),c_{k\\sigma}^{\\dagger}(0)\\}\\rangle\n",
+    "$$\n",
+    "\n",
+    "Remember that in this case the chemical potential can be fixed as  $\\mu = 0$. Take as dispersion:\n",
+    "\n",
+    "$$\n",
+    "\\varepsilon(\\mathbf{k}) = -2t(\\cos k_{x}a+\\cos k_{y}a)\n",
+    "$$\n",
+    "\n",
+    "Plot real and imaginary part as a function of  $\\omega$. Fix  $\\delta$ to a small number. Calculate the local Green function:\n",
+    "\n",
+    "$$\n",
+    "G_{0}(\\omega) = \\frac{1}{N_{k}}\\sum_{\\mathbf{k}}G_{0}(\\mathbf{k},\\omega).\n",
+    "$$\n",
+    "\n",
+    "How many k points do you need till the sum is converged? Choose different small values for the parameter $\\delta$. Verify that the integral of the imaginary part of the local Green function over $\\omega$ yields the number of electrons per site per spin."
+   ]
   },
   {
    "cell_type": "code",
@@ -56,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "cd1e5806",
    "metadata": {},
    "outputs": [
