--- a/Hubbard.ipynb
+++ b/Hubbard.ipynb
@@ -189,8 +189,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "d46f4a8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'1100': 0, '1010': 1, '1001': 2, '0110': 3, '0101': 4, '0011': 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Print the mapping of the Fock states to the basis index \n",
+    "basis=generate_basis_states()\n",
+    "print(state_index_mapping(basis))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "6c125e68",
    "metadata": {},
    "outputs": [
     {
@@ -213,11 +233,10 @@
     }
    ],
    "source": [
-    "basis=generate_basis_states()\n",
     "t, U = sp.symbols('t U', real=True)\n",
     "HH_matrix=Hubbard_Hamiltonian_matrix(basis,t,U) \n",
     "sp.pprint(HH_matrix)\n",
-    "print()\n"
+    "print()"
    ]
   },
   {
